# path-inspect

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: app.rs  lib.rs  main.rs  types.rs  ui.rs
